<resources>
    <string name="TITULO1">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="TITULO2">DISPOSOTIVOS MOVILES</string>
    <string name="TITULO3">DE LA O MARTINEZ VICTOR HUGO</string>
    <string name="TITULO4">INGENIERIA EN SISTEMAS COMPUTACIONALES </string>
    <string name="TITULO5">GARCIA TOVAR JHONATAN JAIR</string>
    <string name="titulo6">7S11</string>
    <string name="desima">Primer Practica</string>

</resources>
